<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout01"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android" android:baselineAligned="true" android:layout_width="wrap_content">
<ScrollView android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent" android:fadeScrollbars="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/relativeLayout1" android:layout_marginTop="10sp">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView1" android:text="@string/dane" android:layout_below="@+id/btnFullwupd" android:layout_marginTop="5sp"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_width="wrap_content" android:text="@string/dane" android:layout_below="@+id/textView3" android:layout_alignRight="@+id/textView3"></TextView>
        <TextView android:layout_below="@+id/textView5" android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView5" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView7" android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView7" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView9" android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView9" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView11" android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView11" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView13" android:layout_height="wrap_content" android:id="@+id/textView15" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView13" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView17" android:layout_below="@+id/textView15" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView15" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView19" android:layout_below="@+id/textView17" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView17" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView21" android:layout_below="@+id/textView19" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView19" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView23" android:layout_below="@+id/textView21" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView21" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_alignLeft="@+id/textView1" android:layout_width="wrap_content" android:text="@string/data" android:layout_below="@+id/btnFullwupd" android:layout_marginTop="5sp"></TextView>
        <TextView android:layout_below="@+id/textView2" android:layout_height="wrap_content" android:id="@+id/textView4" android:text="@string/temp" android:layout_alignLeft="@+id/textView2" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_below="@+id/textView4" android:layout_height="wrap_content" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView4" android:text="@string/desc"></TextView>
        <TextView android:layout_below="@+id/textView6" android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_alignLeft="@+id/textView6" android:text="@string/wind" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_below="@+id/textView8" android:layout_height="wrap_content" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView8" android:text="@string/winddir"></TextView>
        <TextView android:layout_below="@+id/textView10" android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_alignLeft="@+id/textView10" android:text="@string/rain" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_below="@+id/textView12" android:layout_height="wrap_content" android:id="@+id/textView14" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView12" android:text="@string/humidity"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView16" android:layout_below="@+id/textView14" android:layout_alignLeft="@+id/textView14" android:text="@string/chmury" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView18" android:layout_below="@+id/textView16" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView16" android:text="@string/rosa"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView20" android:layout_below="@+id/textView18" android:layout_alignLeft="@+id/textView18" android:text="@string/press" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView22" android:layout_below="@+id/textView20" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView20" android:text="@string/slonce"></TextView>
        <View android:layout_below="@+id/textView22" android:id="@+id/view2" android:background="#FF909090" android:layout_height="2dip" android:layout_width="fill_parent" android:layout_marginTop="5sp" android:layout_marginBottom="5sp"></View>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView25" android:layout_below="@+id/view2" android:layout_width="wrap_content" android:layout_alignRight="@+id/view2" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView31" android:layout_below="@+id/textView25" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView25" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView32" android:layout_below="@+id/textView31" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView31" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView33" android:layout_below="@+id/textView32" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView32" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView34" android:layout_below="@+id/textView33" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView33" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView35" android:layout_below="@+id/textView34" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView34" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView24" android:layout_below="@+id/view2" android:layout_alignLeft="@+id/view2" android:text="@string/data" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView26" android:layout_below="@+id/textView24" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView24" android:text="@string/desc"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView27" android:layout_below="@+id/textView26" android:layout_alignLeft="@+id/textView26" android:text="@string/temp" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView28" android:layout_below="@+id/textView27" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView27" android:text="@string/wind"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView29" android:layout_below="@+id/textView28" android:layout_alignLeft="@+id/textView28" android:text="@string/winddir" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView30" android:layout_below="@+id/textView29" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView29" android:text="@string/humidity"></TextView>
        <View android:layout_height="2dip" android:background="#FF909090" android:id="@+id/view1" android:layout_width="wrap_content" android:layout_below="@+id/textView1" android:layout_alignLeft="@+id/textView1" android:layout_alignRight="@+id/textView1"></View>
        <Button android:layout_below="@+id/view1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/view1" android:layout_alignRight="@+id/view1" android:id="@+id/btnFullwupd" android:layout_marginTop="5sp" android:text="@string/btnFullwupd"></Button>
        <View android:background="#FF909090" android:id="@+id/View01" android:layout_height="2dip" android:layout_below="@+id/btnFullwupd" android:layout_alignLeft="@+id/btnFullwupd" android:layout_alignRight="@+id/btnFullwupd" android:layout_width="fill_parent"></View>
        <TextView android:ellipsize="end" android:textStyle="bold" android:gravity="center" android:shadowDx="1.0" android:typeface="sans" android:padding="3dip" android:textColor="@color/white" android:shadowRadius="3.0" android:textSize="20.0sp" android:layout_height="wrap_content" android:shadowColor="@color/black" android:shadowDy="1.0" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_alignParentRight="true" android:background="@color/dkgrey" android:text="@string/add_newcity"></TextView>
        <View android:layout_marginBottom="5sp" android:layout_width="fill_parent" android:layout_height="2dip" android:background="#FF909090" android:id="@+id/View02" android:layout_marginTop="5sp" android:layout_alignParentLeft="true" android:layout_below="@+id/textView35"></View>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView37" android:layout_below="@+id/View02" android:layout_width="wrap_content" android:layout_alignRight="@+id/View02" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView43" android:layout_below="@+id/textView37" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView37" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView44" android:layout_below="@+id/textView43" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView43" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView45" android:layout_below="@+id/textView44" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView44" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView46" android:layout_below="@+id/textView45" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView45" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView47" android:layout_below="@+id/textView46" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView46" android:text="@string/dane"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView36" android:layout_below="@+id/View02" android:layout_width="wrap_content" android:layout_alignLeft="@+id/View02" android:text="@string/data"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView38" android:layout_below="@+id/textView36" android:layout_alignLeft="@+id/textView36" android:text="@string/desc" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView39" android:layout_below="@+id/textView38" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView38" android:text="@string/temp"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView40" android:layout_below="@+id/textView39" android:layout_alignLeft="@+id/textView39" android:text="@string/wind" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:id="@+id/textView41" android:layout_below="@+id/textView40" android:layout_alignLeft="@+id/textView40" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/winddir"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView42" android:layout_below="@+id/textView41" android:layout_alignLeft="@+id/textView41" android:text="@string/humidity" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <View android:id="@+id/View03" android:layout_height="2dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:layout_marginTop="5sp" android:background="#FF909090" android:layout_alignParentLeft="true" android:layout_below="@+id/textView47"></View>
        <TextView android:layout_below="@+id/View03" android:layout_height="wrap_content" android:id="@+id/textView49" android:layout_width="wrap_content" android:layout_alignRight="@+id/View03" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView49" android:layout_height="wrap_content" android:id="@+id/textView55" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView49" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView55" android:layout_height="wrap_content" android:id="@+id/textView56" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView55" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView56" android:layout_height="wrap_content" android:id="@+id/textView57" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView56" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView57" android:layout_height="wrap_content" android:id="@+id/textView58" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView57" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/textView58" android:layout_height="wrap_content" android:id="@+id/textView59" android:layout_width="wrap_content" android:layout_alignRight="@+id/textView58" android:text="@string/dane"></TextView>
        <TextView android:layout_below="@+id/View03" android:layout_height="wrap_content" android:id="@+id/textView48" android:layout_width="wrap_content" android:layout_alignLeft="@+id/View03" android:text="@string/data"></TextView>
        <TextView android:layout_below="@+id/textView48" android:layout_height="wrap_content" android:id="@+id/textView50" android:layout_alignLeft="@+id/textView48" android:text="@string/desc" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_below="@+id/textView50" android:layout_height="wrap_content" android:id="@+id/textView51" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView50" android:text="@string/temp"></TextView>
        <TextView android:layout_below="@+id/textView51" android:layout_height="wrap_content" android:id="@+id/textView52" android:layout_alignLeft="@+id/textView51" android:text="@string/wind" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
        <TextView android:layout_below="@+id/textView52" android:layout_height="wrap_content" android:id="@+id/textView53" android:layout_width="wrap_content" android:layout_alignLeft="@+id/textView52" android:text="@string/winddir"></TextView>
        <TextView android:layout_below="@+id/textView53" android:layout_height="wrap_content" android:id="@+id/textView54" android:layout_alignLeft="@+id/textView53" android:text="@string/humidity" android:layout_width="fill_parent" android:background="@color/trans_grey"></TextView>
    </RelativeLayout>
</ScrollView>
</LinearLayout>