<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="304.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/widget_daily_briefing_bg">
    <RelativeLayout android:layout_gravity="center" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="190.0dip" android:id="@+id/weather_container" android:layout_marginTop="5.0dip">
        <ImageView android:layout_width="fill_parent" android:layout_height="186.66dip" android:src="@drawable/widget_weather_04_day_intermittent_clouds_large" android:scaleType="fitXY" android:layout_centerHorizontal="true" android:id="@+id/widget_currentIcon"></ImageView>
        <LinearLayout android:layout_gravity="right" android:orientation="horizontal" android:paddingBottom="5.0dip" android:layout_width="310.0dip" android:layout_height="186.66dip" android:id="@+id/group_weatherinfo">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:id="@+id/relativeLayout1">
                <TextView android:textSize="13.0sp" android:typeface="sans" android:textColor="@color/white" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="54.0dip" android:singleLine="true" android:shadowColor="@color/black" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="2.0" android:id="@+id/widget_date" android:text="@string/datapl"></TextView>
                <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/widget_date" android:id="@+id/widget_ampm" android:typeface="normal" android:layout_marginTop="55.0dip"></TextView>
                <ImageView android:paddingTop="21.0dip" android:layout_width="28.0dip" android:layout_height="wrap_content" android:layout_marginLeft="37.0dip" android:layout_below="@id/widget_date" android:id="@+id/widget_time_hour_l" android:src="@drawable/widget_weather_clock_1_0_large" android:scaleType="fitXY"></ImageView>
                <ImageView android:paddingTop="21.0dip" android:layout_width="26.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:layout_toRightOf="@id/widget_time_hour_l" android:layout_alignTop="@id/widget_time_hour_l" android:id="@+id/widget_time_hour_r" android:scaleType="fitXY" android:src="@drawable/widget_weather_clock_2_0_large"></ImageView>
                <ImageView android:paddingTop="21.0dip" android:layout_width="24.0dip" android:layout_height="wrap_content" android:layout_toRightOf="@id/widget_time_hour_r" android:layout_alignTop="@id/widget_time_hour_r" android:id="@+id/widget_time_min_l" android:scaleType="fitXY" android:src="@drawable/widget_weather_clock_3_0_large"></ImageView>
                <ImageView android:paddingTop="21.0dip" android:layout_width="22.0dip" android:layout_height="wrap_content" android:layout_toRightOf="@id/widget_time_min_l" android:layout_alignTop="@id/widget_time_min_l" android:id="@+id/widget_time_min_r" android:scaleType="fitXY" android:src="@drawable/widget_weather_clock_4_0_large"></ImageView>
            </RelativeLayout>
            <LinearLayout android:layout_gravity="bottom|right|center" android:orientation="vertical" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:id="@+id/linearLayout1">
                <RelativeLayout android:gravity="right|center" android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="48.0dip" android:id="@+id/relativeLayout2">
                    <TextView android:textSize="40.0sp" android:typeface="sans" android:textStyle="bold" android:textColor="@color/white" android:gravity="right" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/zero" android:shadowColor="@color/black" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="2.0" android:id="@+id/widget_current_temp"></TextView>
                    <ImageView android:layout_gravity="top" android:layout_marginRight="3.0dip" android:layout_toRightOf="@id/widget_current_temp" android:layout_alignTop="@id/widget_current_temp" android:id="@+id/widget_weather_temp" android:layout_marginTop="3.0dip" android:layout_width="15.0dip" android:layout_height="15dip" android:src="@drawable/widget_weather_temp" android:scaleType="fitXY"></ImageView>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:typeface="sans" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="28.0dip" android:layout_marginTop="20.0dip" android:singleLine="true" android:shadowColor="@color/black" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="3.0" android:layout_alignParentTop="true" android:id="@+id/widget_empty_city" android:text="@string/add_newcity"></TextView>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:id="@+id/linearLayout2" android:layout_width="fill_parent">
        <TextView android:gravity="center" android:background="@drawable/widget_refresh_btn_main" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/opis" android:textStyle="bold" android:id="@+id/widget_weather_desc" android:textColor="#ffffff"></TextView>
    </LinearLayout>
</LinearLayout>

